[accordion]-[bug]: border-radius bottom cut off
- fixed border radius being cut off iwth title color

--- a/scss/components/_accordion.scss
+++ b/scss/components/_accordion.scss
@@ -16,6 +16,7 @@
   @extend %accordion__i--base;
   @include relative();
   margin-bottom: 2px;
+  overflow: hidden;
 
   &.accordion--open {
     @extend %accordion--closed;
